<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="delete_cache"
        android:summary="@string/always_clean_temporary_files"
        android:title="@string/delete_cache_at_start_up" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="hd_images"
        android:title="@string/hd_images"
        android:summary="@string/this_will_use_more_bandwidth" />

</PreferenceScreen>
